[package]
name = "wavesexchange_apis"
version = "0.1.20"
edition = "2021"
authors = ["Artem Sidorenko <kronos44_0@mail.ru>"]

[dependencies]
async-recursion = "1"
base64 = "0.21"
# Using bigdecimal which is compatible with diesel: Diesel 1.x requires 0.1, Diesel 2.x can use up to 0.3
bigdecimal = { version = ">=0.0.13, < 0.4.0", features = ["serde"] }
bs58 = "0.4"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
futures = "0.3"
itertools = "0.10"
once_cell = "1"
percent-encoding = "2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.10"
serde_repr = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "rust_v1.4.3-1" }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.4" }
