[package]
name = "wavesexchange_apis"
version = "0.1.40"
edition = "2021"
authors = ["Artem Sidorenko <kronos44_0@mail.ru>"]

[dependencies]
# Using bigdecimal which is compatible with diesel: Diesel 1.x requires 0.1, Diesel 2.0 can use up to 0.3, Diesel 2.1 uses 0.4
bigdecimal = { version = ">=0.0.13, < 0.5.0", features = ["serde"] }
bs58 = "0.5"
chrono = { version = "0.4.35", default-features = false, features = ["serde"] }
futures = { version = "0.3", default-features = false }
itertools = "0.12"
percent-encoding = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.12"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "rust_v1.5.2" }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.11" }

[dev-dependencies]
tokio-test = "0.4"
test-with = { version = "0.12", default-features = false, features = [] }
