[package]
name = "wavesexchange_dataloader_cache"
version = "0.1.0"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dataloader = { version="0.14", default-features=false, features=["runtime-tokio"] }
ttl_cache = "0.5"