[package]
name = "wavesexchange_dataloader_cache"
version = "0.1.0"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
cached = "0.26.2"
once_cell = "1.8.0"
dataloader = { git = "https://github.com/cksac/dataloader-rs", rev = "527933", default-features=false, features=["runtime-tokio"]}
typemap = { git = "https://github.com/leoyvens/rust-typemap", rev = "9a4bd8"}


[dev-dependencies]
tokio = { version="1", features=["macros", "time"] }
