[package]
name = "wavesexchange_loaders"
version = "0.2.1"
authors = ["Artem Sidorenko <kronos44_0@mail.ru>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
cached = "0.42"
once_cell = "1"
dataloader = { git = "https://github.com/cksac/dataloader-rs", rev = "527933", default-features = false, features = ["runtime-tokio"] }
thiserror = "1"
anymap = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time"] }
