[package]
name = "wavesexchange_loaders"
version = "0.2.5"
authors = ["Artem Sidorenko <kronos44_0@mail.ru>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
cached = { version = "0.51", features = ["async"] }
once_cell = "1"
dataloader = { git = "https://github.com/cksac/dataloader-rs", rev = "527933", default-features = false, features = ["runtime-tokio"] }
thiserror = "1"
anymap = "0.12"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "time"] }
tokio-test = "0.4"
