[package]
name = "wavesexchange_log"
version = "0.3.1"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4"
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.6"
slog-async = "2.5"
slog-json = "2.3"
slog-envlogger = "2.2.0"
chrono = "0.4"
