[package]
name = "wavesexchange_log"
version = "0.5.1"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2018"

[dependencies]
once_cell = "1"
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2"
slog-async = "2"
slog-json = "2"
slog-envlogger = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
