[package]
name = "wavesexchange_topic"
version = "0.4.2"
authors = [
    "Alexander Tuktarov <ATuktarov@web3tech.ru>",
    "Alex Kordys <akordys@web3tech.ru>",
]
edition = "2018"

[dependencies]
percent-encoding = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.10"
thiserror = { version = "1.0" }
url = "2.2.0"

[dev-dependencies]
anyhow = "1.0"
