[package]
name = "wavesexchange_topic"
version = "0.4.2"
authors = [
    "Alexander Tuktarov <ATuktarov@web3tech.ru>",
    "Alex Kordys <akordys@web3tech.ru>",
]
edition = "2018"

[dependencies]
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_qs = "0.11"
thiserror = "1"
url = "2"

[dev-dependencies]
anyhow = "1"
