[package]
name = "wavesexchange_utils"
version = "0.1.0"
edition = "2021"
authors = ["Artem Sidorenko <asidorenko@uniqsoft.ae>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
