[package]
name = "wavesexchange_warp"
version = "0.14.3"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3"
lazy_static = "1" #TODO Why using both lazy_static and once_cell? They are essentially the same
once_cell = "1"
prometheus = { version = "0.13", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.10"
warp = "0.3"
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time"] }
reqwest = "0.11"
