[package]
name = "wavesexchange_warp"
version = "0.14.12"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2021"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
lazy_static = "1"
prometheus = { version = "0.13", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
thiserror = "1"
tokio = { version = "1", default-features = false }
warp = { version = "0.3", default-features = false }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }

[dev-dependencies]
reqwest = "0.12"
tokio = { version = "1", default-features = false, features = ["macros", "time"] }
tokio-test = "0.4"
